[gd_scene load_steps=19 format=3 uid="uid://clrcp7l5lynnv"]

[ext_resource type="Script" uid="uid://v7bqmwfmjft" path="res://scripts/Hud/menu.gd" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://bforb6rtg5gjc" path="res://assets/logo.png" id="1_yqeox"]
[ext_resource type="Shader" uid="uid://dinq5u53uho04" path="res://shaders/image-border_radius.gdshader" id="2_g3eks"]
[ext_resource type="Texture2D" uid="uid://cnmgy8i1iifft" path="res://assets/arrow_menu.png" id="3_mhnvy"]
[ext_resource type="Texture2D" uid="uid://b74iv5qrmwa2i" path="res://assets/close.png" id="4_mhnvy"]
[ext_resource type="Texture2D" uid="uid://bbg0p34sjcoik" path="res://assets/logout.png" id="5_4ytvr"]
[ext_resource type="Texture2D" uid="uid://gmsloiv1paix" path="res://assets/game.png" id="5_13sgg"]
[ext_resource type="Texture2D" uid="uid://b73ocqrg32dgp" path="res://assets/settings.png" id="5_v86rl"]
[ext_resource type="Texture2D" uid="uid://b3tjuvqo1dlfj" path="res://assets/player.png" id="6_70i5f"]
[ext_resource type="Texture2D" uid="uid://bn6dsphe04pl" path="res://assets/leaderboard.png" id="7_mj5lg"]
[ext_resource type="Texture2D" uid="uid://dyu72sw0f5okk" path="res://assets/save.png" id="8_mj5lg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g3eks"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v86rl"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.30588236, 0.1764706, 0.41960785, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v86rl"]
shader = ExtResource("2_g3eks")
shader_parameter/radius = 40.0

[sub_resource type="Animation" id="Animation_g3eks"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu/ArrowMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_v86rl"]
resource_name = "close_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu/ArrowMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(155, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4ytvr"]
resource_name = "open_menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Menu/ArrowMenu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(155, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_13sgg"]
_data = {
&"RESET": SubResource("Animation_g3eks"),
&"close_menu": SubResource("Animation_v86rl"),
&"open_menu": SubResource("Animation_4ytvr")
}

[node name="MenuBar" type="CanvasLayer"]
script = ExtResource("1_con2f")

[node name="Control" type="VBoxContainer" parent="."]
offset_left = -108.0
offset_top = 18.0
offset_right = 122.0
offset_bottom = 900.0
theme_override_constants/separation = 59

[node name="HomeButton" type="Button" parent="Control"]
custom_minimum_size = Vector2(103, 103)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_g3eks")
theme_override_styles/hover = SubResource("StyleBoxFlat_v86rl")
metadata/_edit_use_anchors_ = true

[node name="Logo" type="VBoxContainer" parent="Control/HomeButton"]
layout_mode = 0
offset_left = -9.999999
offset_top = 1.0
offset_right = 1229.9999
offset_bottom = 1540.0
scale = Vector2(0.1, 0.1)
theme_override_constants/separation = 65

[node name="CenterContainer" type="HBoxContainer" parent="Control/HomeButton/Logo"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/HomeButton/Logo/CenterContainer"]
material = SubResource("ShaderMaterial_v86rl")
layout_mode = 2
texture = ExtResource("1_yqeox")

[node name="Label" type="RichTextLabel" parent="Control/HomeButton/Logo"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2
theme_override_constants/line_separation = 0
theme_override_font_sizes/normal_font_size = 105
theme_override_font_sizes/bold_font_size = 105
bbcode_enabled = true
text = "GAMEBOARDER_SUBTITLE"
autowrap_mode = 2
horizontal_alignment = 1

[node name="Menu" type="Control" parent="Control"]
custom_minimum_size = Vector2(102, 710)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="ArrowMenu" type="Panel" parent="Control/Menu"]
custom_minimum_size = Vector2(102, 710)
layout_mode = 0
offset_right = 102.00006
offset_bottom = 710.0
theme_type_variation = &"bg_menu"

[node name="Button" type="Button" parent="Control/Menu/ArrowMenu"]
layout_mode = 0
offset_left = 89.0
offset_top = -0.0030059814
offset_right = 191.0
offset_bottom = 49.858353
theme_type_variation = &"MenuArrow"

[node name="TextureRect" type="TextureRect" parent="Control/Menu/ArrowMenu/Button"]
layout_mode = 0
offset_left = 38.0
offset_top = 8.861359
offset_right = 1574.0
offset_bottom = 1032.8613
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_mhnvy")

[node name="MenuControl" type="Panel" parent="Control/Menu/ArrowMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.90800005
anchor_right = 0.224
anchor_bottom = 13.875001
offset_left = 45.616142
offset_top = -0.0030059814
offset_right = 79.15199
offset_bottom = -9141.254
theme_type_variation = &"bg_menu"

[node name="CurrentGameMenu" type="VBoxContainer" parent="Control/Menu/ArrowMenu/MenuControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.500046
offset_top = 13.0
offset_right = 61.499947
offset_bottom = 56.0
grow_horizontal = 2
theme_override_constants/separation = 9

[node name="Label" type="Label" parent="Control/Menu/ArrowMenu/MenuControl/CurrentGameMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "CURRENT_GAME"
horizontal_alignment = 1

[node name="GameSelect" type="OptionButton" parent="Control/Menu/ArrowMenu/MenuControl/CurrentGameMenu"]
layout_mode = 2
clip_text = true

[node name="MenuButton" type="MarginContainer" parent="Control/Menu/ArrowMenu/MenuControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.9999123
offset_top = 146.00299
offset_right = 2.9999237
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MarginContainer" type="VBoxContainer" parent="Control/Menu/ArrowMenu/MenuControl/MenuButton"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameButton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer"]
layout_mode = 2
theme_type_variation = &"screen_button"
text = "GAME"
icon = ExtResource("5_13sgg")
alignment = 0
expand_icon = true

[node name="PlayerButton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer"]
layout_mode = 2
theme_type_variation = &"screen_button"
text = "PLAYER"
icon = ExtResource("6_70i5f")
alignment = 0
expand_icon = true

[node name="LeaderboardBouton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer"]
layout_mode = 2
theme_type_variation = &"screen_button"
text = "Leaderboard"
icon = ExtResource("7_mj5lg")
alignment = 0
expand_icon = true

[node name="SaveBouton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer"]
layout_mode = 2
theme_type_variation = &"screen_button"
text = "SAVE"
icon = ExtResource("8_mj5lg")
alignment = 0
expand_icon = true

[node name="ControlButton" type="VBoxContainer" parent="Control/Menu/ArrowMenu/MenuControl"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.500015
offset_top = -130.0
offset_right = 63.499985
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 47
alignment = 1

[node name="SettingButton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
theme_type_variation = &"screen_button"
text = "SETTINGS"
icon = ExtResource("5_v86rl")
alignment = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton"]
custom_minimum_size = Vector2(0, 41)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="QuitButton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2
theme_type_variation = &"control_button"

[node name="TextureRect" type="TextureRect" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer/QuitButton"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 283.0
offset_bottom = 283.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_mhnvy")

[node name="LogoutButton" type="Button" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer"]
custom_minimum_size = Vector2(41, 0)
layout_mode = 2
theme_type_variation = &"control_button"

[node name="TextureRect" type="TextureRect" parent="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer/LogoutButton"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 473.0
offset_bottom = 473.0
scale = Vector2(0.07, 0.07)
texture = ExtResource("5_4ytvr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_13sgg")
}

[connection signal="pressed" from="Control/HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="Control/Menu/ArrowMenu/MenuControl/CurrentGameMenu/GameSelect" to="." method="_on_game_select_item_selected"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer/GameButton" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer/PlayerButton" to="." method="_on_player_button_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer/LeaderboardBouton" to="." method="_on_leaderboard_bouton_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/MenuButton/MarginContainer/SaveBouton" to="." method="_on_save_bouton_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/ControlButton/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Control/Menu/ArrowMenu/MenuControl/ControlButton/HBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
